--- a/django-models/LibraryProject/relationship_app/relationship_app/templates/relationship_app/library_detail.html
+++ b/django-models/LibraryProject/relationship_app/relationship_app/templates/relationship_app/library_detail.html
@@ -1,7 +1,7 @@
-<h1>Library: {{ object.name }}</h1>
+<h1>Library: {{ library.name }}</h1>
 <h2>Books in this Library:</h2>
 <ul>
-    {% for book in object.book_set.all %}
+    {% for book in library.books.all %}
         <li>{{ book.title }} by {{ book.author.name }}</li>
     {% empty %}
         <li>No books in this library.</li>
