--- a/django_blog/blog/templates/profile.html
+++ b/django_blog/blog/templates/profile.html
@@ -33,3 +33,20 @@
     <button type="submit">Save changes</button>
   </form>
 {% endblock %}
+
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Profile</title>
+    <link rel="stylesheet" href="{% static 'blog/style.css' %}">
+</head>
+<body>
+    <h2>Your Profile</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Save Changes</button>
+    </form>
+</body>
+</html>
