--- a/django_blog/blog/templates/base.html
+++ b/django_blog/blog/templates/base.html
@@ -1,16 +1,33 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Django Blog</title>
-    <link rel="stylesheet" href="{% static 'blog/css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/css/auth.css' %}">
 </head>
 <body>
     <header>
         <h1>Django Blog</h1>
+        <nav>
+            <ul>
+                {% if user.is_authenticated %}
+                    <li><a href="{% url 'profile' %}">Profile</a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                {% endif %}
+            </ul>
+        </nav>
     </header>
+
     <main>
         {% block content %}{% endblock %}
     </main>
+
+    <footer>
+        <p>&copy; {{ year|default:2025 }} Django Blog</p>
+    </footer>
 </body>
 </html>
